manifests/expose-app/expose-app-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-api-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web-api.k8s.computer"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-api-gateway-vs
spec:
  hosts:
  - "web-api.k8s.computer"
  gateways:
  - web-api-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: web-api
